--- a/Week2/css/slideshow.css
+++ b/Week2/css/slideshow.css
@@ -1,3 +1,13 @@
+h1 {
+    font-family: "arial";
+    font-style: italic;
+    margin-bottom: 5px;
+}
+
 #viewerImg {
     width: 75%;
+}
+
+.viewer {
+    text-align: center;
 }
