--- a/Week2/css/slideshow.css
+++ b/Week2/css/slideshow.css
@@ -1,6 +1,11 @@
+body {
+    background-color: black;
+}
+
 h1 {
     font-family: "arial";
     font-style: italic;
+    color: silver;
     margin-bottom: 5px;
 }
 
@@ -10,4 +15,20 @@ h1 {
 
 .viewer {
     text-align: center;
+}
+
+.viewer .button {
+    width: 32px;
+    height: 32px;
+    display: inline-block;
+    background-color: rgba(192, 192, 192, 0.5);
+    background-size: cover;
+}
+
+.viewer .button.previous {
+    background-image: url(../images/previous.png);
+}
+
+.viewer .button.next {
+    background-image: url(../images/next.png);
 }
